dark mode desktop/mobile fix

--- a/src/components/Projects/Project/Project.module.scss
+++ b/src/components/Projects/Project/Project.module.scss
@@ -3,7 +3,6 @@
 .project {
   background-color: var(#{--bgPrimaryDefault});
   color: var(#{--textDefault});
-  border: 2px solid #E7E7E7;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
